pipeline user instad of claw

--- a/gen_caltables.cfg
+++ b/gen_caltables.cfg
@@ -1,9 +1,9 @@
 dada_dir="/lustre/data/current"
-outdir="/lustre/claw/current"
+outdir="/lustre/pipeline/current"
 spws="$(echo {00..21})"
 do_pol_swap=false
 exp_line_swap=false
-antflag_dir="/home/claw/code/calim-pipeline-phase2/flagfiles"
+antflag_dir="/home/pipeline/code/calim-pipeline-phase2/flagfiles"
 aoflag=false
 do_frq_offset=false
 peel=false
