--- a/gen_caltables.cfg
+++ b/gen_caltables.cfg
@@ -1,5 +1,6 @@
 dada_dir="/lustre/data/current"
-outdir="/lustre/pipeline/current"
+datestr=`date -u +'%y%m%d'`
+outdir="/lustre/pipeline/${datestr}"
 spws="$(echo {00..21})"
 do_pol_swap=false
 exp_line_swap=false
