Cleaned up gen_caltables.sh and added multi-integration and pol cal capabilities.

--- a/gen_caltables.cfg
+++ b/gen_caltables.cfg
@@ -2,16 +2,11 @@ dada_dir="/lustre/data/current"
 datestr=`date -u +'%y%m%d'`
 outdir="/lustre/pipeline/${datestr}"
 spws="$(echo {00..21})"
-do_pol_swap=false
-exp_line_swap=false
 antflag_dir="/home/pipeline/code/calim-pipeline-phase2/flagfiles"
-aoflag=false
-do_frq_offset=false
 peel=false
 zest=false
 shave=false
 prune=false
 bandpass=false
-removerfi=false
-stokes_cal=false
-usettcal=false
+stokes_cal=true
+multiint=true
